# simplon_projet1_toolbox

./: CONTRIBUTING.md  README.md  coverage.xml  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/modules/: __init__.py
public/: index.html  searchindex.js
public/.doctrees/: environment.pickle  index.doctree
tests/: test_main.py  test_math_csv.py
